This is the CHANGELOG for amavisd-milter.

20100131:
	amavisd-milter-1.4.1:

	New features:
	-  Added new amavisd-milter option -P which causes that mails pass
	   through when amavisd-new fails.

	Bug and compatibility fixies:
	- Debian installs libmilter.a to /usr/lib/libmilter.
	- sendmail 8.14 introduces three new libmilter callbacks.

20091029:
	amavisd-milter(8) manual page has been improved:
	- Added link to milter documentation.
	- Added socket name format description for sendmail and amavisd-new
	  socket.

20091003:
	Added new amavisd-milter option -P which causes that mails pass through
	when amavisd-new fails.

	Thans to: Uli Schellhaas <uli.schellhaas@memware.de>

20090803:
	Bug fix - sendmail 8.14 introduces three new callbacks.

20090601:
	Compatibility fix - Debian installs libmilter.a to /usr/lib/libmilter.

	Thanks to: Simon Hobson <linux@thehobsons.co.uk>

20081205:
	amavisd-milter-1.4.0:

	New features:
	- Added new amavisd-milter option -q which sets milter socket backlog
	  used by listen(2).
	- Local state directory (default /var/amavis) is tunable via configure
	  option:
	  --localstatedir=</DIR>	      - absolute path to local state
	  					directory.
	- Working directory (default local state directory) is tunable via
	  configure option:
	  --with-working-directory=<SUBDIR>   - subdirectory of local
						state directory.
	  --with-working-directory=</DIR>     - absolute path to working
						directory.

	Bug and compatibility fixies:
	- amavisd-milter convert CRLF to LF in mail body to support amavisd-new
	  integrated DKIM signing and verification.
	- Fixed memory leak in fts_alloc() on Solaris.
	- Solaris doesn't have dirfd().
	- Solaris 9 and older doesn't have sem_timedwait.

20081109:
	Local state directory (default /var/amavis) is tunable via configure
	option: --localstatedir=<DIR>

	Working directory (default local state directory) is tunable via
	configure option: